# IDocCore

./: README.md  mkdocs.yml  package-lock.json  translate.py
docs/ICmd/: cmdOption.md  cmdrules.md  install.md  overview.md
docs/ICore/: Abort-FailFast.md  architecture.md  安全策略.md  自定义数据类型 1.md
docs/ICore/util/: IPacakgeUtil.md
docs/IHttpCore/: quickstart.md
docs/IHttpCore/advance/: IHttpCors.md
docs/IHttpCore/biscuit/: IHttpMime.md
docs/IHttpCore/components/: headers.md  multipart.md  response.md
docs/IHttpCore/controller/: IHttpCore路由返回类型 Response类型.md  IHttpCore路由返回类型 基础类型.md
docs/IMakeCore/: IMakeCore_files.md  Principle.md  createPackages.md  definePackage.md  install.md  ipc.md  ipubcore.md  packageIntegration.md  packageServer.md  quick_start.md  usageDemo.md  usageDemo2.md  usageDemo3.md  usage_backup.md
docs/IMakeCore/reference/: CMakeLists.txt  IndexController.cpp  IndexController.h  main.cpp  packages.json
docs/IRdbCore/: overview.md
docs/IRdbCore/entity/: IRdbValueGeneratorInterface.md  View.md
docs/en/: index.md
docs/en/ICmd/: api.md  cmdAction.md  cmdArgs.md  cmdArgx.md  cmdOption.md  cmdOptionValue.md  cmdrules.md  install.md  overview.md
docs/en/ICore/: Abort-FailFast.md  Bean.md  Config.md  IAbort.md  IApplication.md  IException.md  Q_GADGET.md  Task.md  Test.md  architecture.md  安全策略.md  自定义数据类型 1.md  自定义数据类型 2.md
docs/en/IHttpCore/: notice.md  overview.md  quickstart.md
docs/en/IMakeCore/: IMakeCore_files.md  Principle.md  configs_json.md  definePackage.md  (+17 more)
docs/jd/: jd.md  jd_plus.md  简历-v3.md  简历.md
docs/zh/: index.md
(+92 files in other folders)
